--- a/css/index.css
+++ b/css/index.css
@@ -101,15 +101,62 @@
     background-image: linear-gradient(#e66465, #9198e5);
     /* transform: rotate(60deg); */
     transition: all 1s;
-    animation: myfirst 5s infinite;
+    /* animation: myfirst 5s infinite; */
 }
 
-img {
-    border-radius: 50%;
-}
+/* img {
+    border-radius: 5%;
+} */
 
 .box5:hover {
     /* transform: rotateX(180deg); */
     transform: rotateY(180deg);
 
+}
+
+.box6 {
+    float: left;
+    margin-left: 20px;
+}
+
+#container3 {
+    position: relative;
+    width: 50%;
+    height: 300px;
+    margin: 0 auto;
+    top: 100px;
+
+}
+
+.img-box {
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#tab-btn {
+    position: relative;
+    top: 150px;
+    height: 30px;
+
+}
+.tab2 {
+    width: 70px;
+    height: 30px;
+    border: 1px red solid;
+    background-color: gray;
+    color: white;
+    position: absolute;
+    text-align: center;
+}
+
+.tab-left {
+    left: -80px;
+}
+
+.tab-right {
+    right: -100px;
 }
