--- a/css/index.css
+++ b/css/index.css
@@ -160,3 +160,33 @@
 .tab-right {
     right: -100px;
 }
+
+#container4 {
+    position: relative;
+    top: 300px;
+    display: flex;
+    justify-content: space-between;
+    justify-items: center;
+    align-items: center;
+}
+
+.card {
+    width: 100px;
+    height: 100px;
+    background: #2ecc71;
+    margin: 20px;
+    transform: rotateY(180deg);
+    transition: all 1s;
+    opacity: .5;
+    color: #2ecc71;
+    text-align: center;
+    line-height: 100px;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.card:hover {
+    transform: rotateY(0deg);
+    opacity: 1;
+    color: white;
+}
